config/envoy.yaml
static_resources:
    clusters:
        - name: backend1
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.1.1
                                      port_value: 8001
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.1.1
                                      port_value: 8002
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.1.1
                                      port_value: 8003
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.1.1
                                      port_value: 8004
        - name: backend2
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.2.1
                                      port_value: 8001
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.2.1
                                      port_value: 8002
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.2.1
                                      port_value: 8003
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.2.1
                                      port_value: 8004
        - name: backend3
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.3.1
                                      port_value: 8001
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.3.1
                                      port_value: 8002
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.3.1
                                      port_value: 8003
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.3.1
                                      port_value: 8004
        - name: backend4
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.4.1
                                      port_value: 8001
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.4.1
                                      port_value: 8002
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.4.1
                                      port_value: 8003
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 10.0.4.1
                                      port_value: 8004
    listeners:
        - name: listener0
          address:
              socket_address:
                  address: 127.0.0.1
                  port_value: 3333

          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server1"
                                          route:
                                              cluster: backend1
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server2"
                                          route:
                                              cluster: backend2
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server3"
                                          route:
                                              cluster: backend3
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server4"
                                          route:
                                              cluster: backend4
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
